--- a/css/work.css
+++ b/css/work.css
@@ -17,6 +17,9 @@
 	.top
 		{
 			padding-top: 70px;	/*ページ上のコンテンツ表示位置を、ヘッダー下になるように*/
+			background-color: #a549bc;	/*背景色を指定*/
+			height: 70px;	/*高さを指定*/
+			width: 100%;	/*横幅を画面全体へ広げる*/
 		}
 
     article
@@ -27,7 +30,7 @@
 	section
 		{
 			display: inline-block;					/*コンテンツ要素を変更*/
-			text-align: left;						/*コンテンツを左寄せに*/
+			text-align: center;						/*コンテンツを中央寄せに*/
 			padding: 20px;							/*コンテンツの上下左右に余白を設定*/
 			border-bottom: 1px solid #999999;	/*コンテンツを区切るための線を引く*/
 		}
@@ -35,7 +38,6 @@
 
 	figure
 		{
-			background-color: #999999;		/*コンテンツの背景色を設定*/
 			text-align: center;				/*画像を中央に配置する*/
 			padding: 50px;					/*画像に対して、上下左右の余白を設ける*/
 			margin: 0;
@@ -49,10 +51,11 @@
 			line-height: normal;		/*行間の調整*/
 		}
 
-/*サイト名*/
+/*サイト名と作品名*/
 	h1
 		{
 			font-size: 25px;	/*フォントサイズ指定*/
+			color: #ffffff;
 			margin: 20px;		/*画面ぎりぎりに表示されないよう、余白を設ける*/
 		}
 
